# sharedlibpp

./: CMakeLists.txt
examples/: CMakeLists.txt  MyMath.h  math_test.cpp
